# framebase

./: .gitignore  README.md  README.zh-CN.md  log
apps/desktop/: collage-templates-preview.html  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
apps/desktop/electron/: main.js  preload.js
apps/desktop/mock-ui/: README.md  crypto.html  index.html  lightroom.html  notion.html  styles.css
apps/desktop/src/: App.jsx  app.js  index.css  index.html  styles.css
apps/lightbox-lab/: index.html  package-lock.json  package.json  vite.config.js
apps/lightbox-lab/src/: App.jsx  index.css
design/mockups/: README.md  theme-system.md
docs/: cover-editor.md  current-plan.md  developer-setup.md  editor-ui-requirement.md  ground-truth-workflow.md  image-asset-model.md  text-tool-plan.md
docs/mockups/: editor-all-tools-v2.html  editor-all-tools-v3.html  editor-all-tools-v4.html  editor-all-tools-v5.html  editor-all-tools-v6.html  editor-all-tools.html  editor-crop-v3.html  editor-crop.html  editor-image-overlay-mockup.html  text-tool-mockup.html
services/sidecar/: pyproject.toml
services/sidecar/src/media_workspace/: ai_repaint.py  analysis.py  benchmark.py  catalog.py  cli.py  config.py  db.py  evaluation.py  file_types.py  ground_truth.py  job_runner.py  metadata.py  models.py  preview_service.py  reverse_lookup.py  scanner.py  schema.py  watcher.py
tests/: test_benchmark.py  test_evaluation.py  test_file_types.py  test_ground_truth.py  test_jobs.py  test_metadata.py  test_preview_service.py  test_reverse_lookup.py  test_scanner.py
(+24 files in other folders)
