[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "media-workspace-sidecar"
version = "0.1.0"
description = "Local-first asset graph, metadata cache, and reverse lookup sidecar"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

